--- a/mtrp/index.html
+++ b/mtrp/index.html
@@ -630,6 +630,8 @@
                     Online participants will attend it virtually. On-site participants may also request for online attendance.
                 </div>
             </div>
+        </div>
+    </section>
 
     <!-- Rules Section -->
     <section class="page-section">
@@ -681,6 +683,37 @@
                     </ul>
                 </div>
 
+                <div class="rule-card">
+                    <div class="rule-icon">🏅</div>
+                    <h3 class="rule-title">Prizes</h3>
+                    <ul class="rule-list">
+                        <li>Sub-Junior: Exciting prizes</li>
+                        <li>Junior & Senior: Combined scores</li>
+                        <li>Special awards announced</li>
+                        <li>All get participation certificates</li>
+                    </ul>
+                </div>
+
+                <div class="rule-card">
+                    <div class="rule-icon">⚠️</div>
+                    <h3 class="rule-title">Exam Conduct</h3>
+                    <ul class="rule-list">
+                        <li>No calculators or devices</li>
+                        <li>No notes or reference materials</li>
+                        <li>Malpractice leads to cancellation</li>
+                        <li>Follow invigilator instructions</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Rules Section -->
+    <section class="page-section">
+        <div class="section-content">
+            <h2 class="section-title">Rules & Guidelines</h2>
+            
+            <div class="rules-grid">
                 <div class="rule-card">
                     <div class="rule-icon">🏅</div>
                     <h3 class="rule-title">Prizes</h3>
@@ -787,4 +820,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html>    
