--- a/gallery/index.html
+++ b/gallery/index.html
@@ -67,7 +67,7 @@
 
   <section class="hero">
     <div>
-      <h1>📸 Events Gallery</h1>
+       <h1>📸 <span>Events Gallery</span></h1>
       <p>Capturing moments of brilliance and creativity</p>
     </div>
   </section>
