Fix mails and color toggle bug

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <div class="contact-card">
             <h4>Instagram</h4>
             <p><strong>Link:</strong>
-              <a href="https://www.instagram.com/isik_integration?igsh=MTZwNmlhMnp6cGh6dA==" target="_blank">
+              <a href="https://www.instagram.com/isik_integration" target="_blank">
                 Instagram Page
               </a>
             </p>
