--- a/mtrp/index.html
+++ b/mtrp/index.html
@@ -773,7 +773,7 @@
         <div class="footer-social">
           <span>Follow Integration Fest:</span>
           <div class="social-links">
-            <a href="https://www.instagram.com/isik_integration?igsh=MTZwNmlhMnp6cGh6dA==" class="social-link">📷</a>
+            <a href="https://www.instagram.com/isik_integration" class="social-link">📷</a>
           </div>
         </div>
       </div>
