--- a/sparq/index.html
+++ b/sparq/index.html
@@ -270,9 +270,15 @@
     <div class="footer-content">
       <div class="footer-logo">Integration Fest 2026</div>
       <div class="footer-contact">
-        <p class="contact-item">📧 aryanilkundu.integration@gmail.com</p>
-        <p class="contact-item">📧 sparq@integrationfest.in</p>
-        <p class="contact-item">📞 +91 6289 749 608</p>
+        <p class="contact-item">
+          📧 <a href="mailto:arnabpalit.integration@gmail.com">arnabpalit.integration@gmail.com</a>
+        </p>
+        <p class="contact-item">
+          📧 <a href="mailto:sparq@integrationfest.in">sparq@integrationfest.in</a>
+        </p>
+        <p class="contact-item">
+          📞 Aryanil Kundu: <a href="tel:+916289749608">+91 6289 749 608</a>
+        </p>
       </div>
     </div>
   </footer>
