--- a/mtrp/index.html
+++ b/mtrp/index.html
@@ -715,8 +715,49 @@
     </div>
   </section>
 
+  <!-- Information & Resources Section -->
+  <section id="resources" class="page-section alt-bg">
+    <div class="section-content">
+      <h2 class="section-title">Information & Resources</h2>
+      
+      <div class="resources-grid">
+        <div class="resource-card">
+          <div class="resource-icon">📘</div>
+          <h3 class="resource-title">Information Brochure</h3>
+          <p class="resource-desc">Complete details about MTRP 2026, syllabus, rules, and exam pattern</p>
+          <a href="#" id="brochure-link" class="resource-btn" target="_blank" rel="noopener">
+            <span class="btn-icon">📥</span>
+            Download Brochure
+          </a>
+        </div>
+
+        <div class="resource-card">
+          <div class="resource-icon">📝</div>
+          <h3 class="resource-title">Previous Year Papers</h3>
+          <p class="resource-desc">Practice with question papers from past years</p>
+          <div class="pyq-links">
+            <a href="#" id="pyq-2015" class="pyq-btn" target="_blank" rel="noopener">2015</a>
+            <a href="#" id="pyq-2016" class="pyq-btn" target="_blank" rel="noopener">2016</a>
+            <a href="#" id="pyq-2017" class="pyq-btn" target="_blank" rel="noopener">2017</a>
+            <a href="#" id="pyq-2018" class="pyq-btn" target="_blank" rel="noopener">2018</a>
+          </div>
+        </div>
+
+        <div class="resource-card">
+          <div class="resource-icon">🎯</div>
+          <h3 class="resource-title">Preparation Resources</h3>
+          <p class="resource-desc">Additional materials and resources for effective preparation</p>
+          <a href="#" id="resources-link" class="resource-btn" target="_blank" rel="noopener">
+            <span class="btn-icon">🔗</span>
+            Access Resources
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Registration Form Section -->
-  <section id="register" class="page-section alt-bg">
+  <section id="register" class="page-section">
     <div class="section-content">
       <h2 class="section-title">Register for MTRP 2026</h2>
       <div class="registration-box">
@@ -763,7 +804,6 @@
               <span class="contact-icon">📞</span>
               <a href="tel:+918335008308">Soumya Chanda: +91 83350 08308</a>
               <a href="tel:+919830064115">Ahan Mukherjee: +91 98300 64115</a>
-
             </p>
           </div>
         </div>
