--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <div class="stats-grid">
       <div class="stat-item">
-        <div class="stat-number">15+</div>
+        <div class="stat-number">12</div>
         <div class="stat-label">Events</div>
       </div>
       <div class="stat-item">
