Update to the latest website

--- a/cultural/index.html
+++ b/cultural/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="darkreader-lock">
   <title>Cultural Events - Integration Fest 2026</title>
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/global.css">
 </head>
@@ -81,8 +83,15 @@
       </div>
       <p class="section-subtitle">The Symphony of Indian Music Throughout the Ages</p>
 
+      <div class="poster-placeholder">
+        <img src="/assets/files/alaap/alaap_poster.png" alt="Alaap Poster" width="500" height="707.317">
+      </div>
+
+      <h2 class="section-title">Event Brochure</h2>
       <div class="poster-container">
-        <a href="#" class="btn poster-btn">View Poster - Coming Soon</a>
+        <a href="/assets/files/alaap/Alaap_Brochure.pdf" target="_blank" class="poster-btn">
+          View Brochure
+        </a>
       </div>
 
       <p class="section-text">
@@ -127,10 +136,21 @@
         </div>
       </div>
 
-      <div class="registration-box">
-        <h3 class="registration-title">Register for Alaap</h3>
-        <p class="coming-soon">Coming Soon</p>
-      </div>
+      <!-- Registration Section -->
+      <section class="page-section">
+        <div class="section-content">
+          <h2 class="section-title">Register for Alaap</h2>
+          <div class="registration-box">
+            <h3 class="registration-title">Registration Portal</h3>
+
+            <div class="form-btn-container">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdvcsuCdQLWv7uEyzXHVME7YhzXeGdmoxrFxu9xI0ypTqVFfw/viewform"
+                target="_blank" class="poster-btn">Form Link</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </div>
   </section>
 
@@ -264,12 +284,20 @@
       </div>
       <p class="section-subtitle">Capturing Moments, Creating Stories</p>
 
+      <div class="poster-placeholder">
+        <img src="/assets/files/thru-da-lens/Thru_Da_Lens_Poster.jpg" alt="Thru Da Lens Poster" width="500"
+          height="707.317">
+      </div>
+
+      <h2 class="section-title">Event Brochure</h2>
       <div class="poster-container">
-        <a href="#" class="btn poster-btn">View Poster - Coming Soon</a>
+        <a href="/assets/files/thru-da-lens/Thru_Da_Lens_Brochure.pdf" target="_blank" class="poster-btn">
+          View Brochure
+        </a>
       </div>
 
       <p class="section-text">
-        Thru Da Lens" is a pan-India online photography contest celebrating the art of visual storytelling. This
+        Thru Da Lens is a pan-India online photography contest celebrating the art of visual storytelling. This
         competition is open to all photography enthusiasts across the nation, offering an exciting experience regardless
         of age, with a special invitation extended to students from schools and colleges to showcase their unique
         perspectives. Participants are challenged to capture compelling and poignant moments that align with a central
@@ -286,15 +314,15 @@
           <div class="feature-icon">📷</div>
           <h3 class="feature-title">Competition Themes</h3>
           <p class="feature-desc">
-            • Portrait • Landscape • Street • Macro • Architectural • Abstract • B&W • Mobile
+            • Open — Choose any theme you prefer
           </p>
         </div>
 
         <div class="feature-card">
           <div class="feature-icon">🖼</div>
-          <h3 class="feature-title">Exhibition & Showcase</h3>
+          <h3 class="feature-title">Showcase</h3>
           <p class="feature-desc">
-            Selected photographs will be displayed during the fest exhibition for all to enjoy.
+            Selected photographs will be spotlighted regularly on our Instagram Page.
           </p>
         </div>
 
@@ -307,10 +335,20 @@
         </div>
       </div>
 
-      <div class="registration-box">
-        <h3 class="registration-title">Submit Your Photos</h3>
-        <p class="coming-soon">Coming Soon</p>
-      </div>
+      <!-- Registration Section -->
+      <section class="page-section">
+        <div class="section-content">
+          <h2 class="section-title">Register for Thru Da Lens</h2>
+          <div class="registration-box">
+            <h3 class="registration-title">Registration Portal</h3>
+
+            <div class="form-btn-container">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSe5BzR9IJiA0GfpRyc-kJe-M5NCQosnAO3Mxlbdb1R24891ww/viewform"
+                target="_blank" class="poster-btn">Form Link</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </section>
 
