--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,17 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="darkreader-lock">
   <title>Gallery - Integration Fest 2026</title>
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/global.css">
-  <style>
-    .icon {
-      width: 1.1em;
-      height: 1.1em;
-      vertical-align: sub;
-      margin-right: 0.4em;
-    }
-  </style>
 </head>
 
 <body class="light-mode">
@@ -76,7 +70,6 @@
   <section class="hero">
     <div>
       <h1>
-        <img src="https://cdn-icons-png.flaticon.com/512/1042/1042339.png" alt="Camera" class="icon" />
         Events Gallery
       </h1>
 
@@ -99,37 +92,37 @@
     <div class="gallery-container active" id="tech-gallery">
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="../assets/images/MTRP_0.JPG?w=700&h=400&fit=crop" alt="Tech 1">
+          <img src="/assets/images/MTRP_0.JPG?w=700&h=400&fit=crop" alt="Tech 1">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/MTRP_1.JPG?w=800&h=500&fit=crop" alt="Tech 2">
+          <img src="/assets/images/MTRP_1.JPG?w=800&h=500&fit=crop" alt="Tech 2">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/MTRP_6.jpg?w=800&h=700&fit=crop" alt="Tech 3">
+          <img src="/assets/images/MTRP_6.jpg?w=800&h=700&fit=crop" alt="Tech 3">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/MTRP_3.JPG?w=800&h=550&fit=crop" alt="Tech 4">
+          <img src="/assets/images/MTRP_3.JPG?w=800&h=550&fit=crop" alt="Tech 4">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/MTRP_4.JPG?w=800&h=600" alt="Tech 5">
+          <img src="/assets/images/MTRP_4.JPG?w=800&h=600" alt="Tech 5">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/MTRP_2.JPG?w=800&h=700&fit=crop" alt="Tech 6">
+          <img src="/assets/images/MTRP_2.JPG?w=800&h=700&fit=crop" alt="Tech 6">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
@@ -158,37 +151,37 @@
     <div class="gallery-container" id="cultural-gallery">
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="../assets/images/cultural_alaap.jpg?w=800&h=600&fit=crop" alt="Cultural 1">
+          <img src="/assets/images/cultural_alaap.jpg?w=800&h=600&fit=crop" alt="Cultural 1">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/cultural_tdl_0.jpg?w=800&h=500&fit=crop" alt="Cultural 2">
+          <img src="/assets/images/cultural_tdl_0.jpg?w=800&h=500&fit=crop" alt="Cultural 2">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/cultural_0.jpg?w=800&h=700&fit=crop" alt="Cultural 3">
+          <img src="/assets/images/cultural_0.jpg?w=800&h=700&fit=crop" alt="Cultural 3">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/cultural_alaap_0.jpg?w=800&h=550&fit=crop" alt="Cultural 4">
+          <img src="/assets/images/cultural_alaap_0.jpg?w=800&h=550&fit=crop" alt="Cultural 4">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/cultural_1.jpg?w=800&h=550&fit=crop" alt="Cultural 5">
+          <img src="/assets/images/cultural_1.jpg?w=800&h=550&fit=crop" alt="Cultural 5">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/cultural_2.jpg?w=800&h=550&fit=crop" alt="Cultural 6">
+          <img src="/assets/images/cultural_2.jpg?w=800&h=550&fit=crop" alt="Cultural 6">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
@@ -199,37 +192,37 @@
     <div class="gallery-container" id="sports-gallery">
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="../assets/images/sports_1.jpg?w=800&h=500&fit=crop" alt="Sports 1">
+          <img src="/assets/images/sports_1.jpg?w=800&h=500&fit=crop" alt="Sports 1">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/sports_chess_0.jpg?w=800&h=500&fit=crop" alt="Sports 2">
+          <img src="/assets/images/sports_chess_0.jpg?w=800&h=500&fit=crop" alt="Sports 2">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/sports_cricket_1.jpg?w=800&h=700&fit=crop" alt="Sports 3">
+          <img src="/assets/images/sports_cricket_1.jpg?w=800&h=700&fit=crop" alt="Sports 3">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/sports_football_1.jpg?w=800&h=500&fit=crop" alt="Sports 4">
+          <img src="/assets/images/sports_football_1.jpg?w=800&h=500&fit=crop" alt="Sports 4">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/sports_2.jpg?w=800&h=500&fit=crop" alt="Sports 5">
+          <img src="/assets/images/sports_2.jpg?w=800&h=500&fit=crop" alt="Sports 5">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
         </div>
         <div class="gallery-item">
-          <img src="../assets/images/sports_3.jpg?w=800&h=500&fit=crop" alt="Sports 6">
+          <img src="/assets/images/sports_3.jpg?w=800&h=500&fit=crop" alt="Sports 6">
           <div class="item-overlay">
           </div>
           <div class="zoom-icon">🔍</div>
@@ -240,9 +233,9 @@
 
   <div class="lightbox" id="lightbox">
     <div class="lightbox-controls">
+      <button class="lb-btn" id="resetZoom">↺</button>
       <button class="lb-btn" id="zoomIn">+</button>
       <button class="lb-btn" id="zoomOut">−</button>
-      <button class="lb-btn" id="resetZoom">↺</button>
       <button class="lb-close" id="closeLightbox">×</button>
     </div>
 
