--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="darkreader-lock">
   <title>Integration Fest 2026 - Indian Statistical Institute, Kolkata</title>
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/global.css">
 </head>
@@ -281,7 +283,7 @@
 
     <div class="stats-grid">
       <div class="stat-item">
-        <div class="stat-number">15+</div>
+        <div class="stat-number">12</div>
         <div class="stat-label">Events</div>
       </div>
       <div class="stat-item">
@@ -317,7 +319,7 @@
         </p>
       </div>
 
-      <div class="tab-content" id="sponsors">
+      <div class="tab-content active" id="sponsors">
         <h3>Our Sponsors</h3>
         <p>
           <!-- Enter stuff -->
@@ -334,8 +336,8 @@
         <div class="contact-info">
           <div class="contact-card">
             <h4>Sponsorship</h4>
-            <!-- TODO: enter the final email here -->
-            <p><strong>Email:</strong> <i>insert email here</i></p>
+            <p><strong>Email:</strong> <a
+                href="mailto:sponsorship@integrationfest.in">sponsorship@integrationfest.in</a></p>
           </div>
           <div class="contact-card">
             <h4>Helpdesk</h4>
