--- a/sparq/index.html
+++ b/sparq/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Integration Fest | SPARQ 2026</title>
+  <meta name="darkreader-lock">
+  <title>SPARQ 2026 - Integration Fest</title>
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/global.css">
 </head>
@@ -76,11 +78,21 @@
       <div class="hero-prize">
         <div class="prize-badge">
           <span class="prize-label">Prize Pool</span>
-          <span class="prize-amount">₹20,000</span>
+          <span class="prize-amount">₹50,000+</span>
         </div>
         <div class="prize-highlight">
-          Winners get a chance to attend a workshop by <strong>CAIML</strong><br>
-          <span class="prize-sub">(Prominent ML Lab at ISI Kolkata)</span>
+          Participants who register will get the opportunity to attend an exclusive workshop conducted by
+          <strong>Industry Experts</strong>, professors from <strong>IIT</strong> and <strong>ISI</strong>, and experts
+          from
+          <strong>CAIML</strong><br>
+          <span class="prize-sub">(Prominent AI/ML Research Lab at ISI Kolkata)</span>
+        </div>
+        <div class="prize-highlight">
+          Winners get a chance to attend an
+          <strong>Industry Interaction Camp</strong>, engaging with leading
+          professionals from firms such as J.P. Morgan, Standard Chartered,
+          Goldman Sachs, and other top-tier financial
+          institutions.
         </div>
       </div>
       <a href="#register" class="btn-hero">Register Now</a>
@@ -111,11 +123,33 @@
     <div class="section-content">
       <h2 class="section-title">Event Poster</h2>
       <div class="poster-placeholder">
-        <div class="poster-icon">📊</div>
-        <p class="poster-text">Poster Coming Soon</p>
+        <img src="/assets/files/sparq/sparq_poster.png" alt="Sparq Poster" width="500" height="707.317">
       </div>
+    </div>
+  </section>
+
+  <!-- Brochure for uh..well...SPARQ!! -->
+  <section class="page-section">
+    <div class="section-content">
+      <h2 class="section-title">Event Brochure</h2>
       <div class="poster-container">
-        <a href="#" class="poster-btn">View Poster</a>
+        <a href="/assets/files/sparq/SPARQ_Student_Brochure.pdf" target="_blank" class="poster-btn">
+          View Brochure
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Campus Ambassador -->
+  <section class="page-section alt-bg">
+    <div class="section-content">
+      <h2 class="section-title">Campus Ambassador</h2>
+      <div>
+        <p class="hero-subtitle">Want to become the face of our event?</p>
+        <p class="hero-tagline">Check out this paid opportunity here!</p>
+      </div>
+      <div class="poster-placeholder">
+        <img src="/assets/files/sparq/sparq-campus-amb.png" alt="Sparq Campus Ambassador" width="500" height="704.833">
       </div>
     </div>
   </section>
@@ -155,7 +189,7 @@
         <div class="syllabus-box">
           <h4 class="syllabus-title">Syllabus (For 10+2)</h4>
           <ul class="syllabus-list">
-            <li>Mathematics: Based on MCQ questions</li>
+            <li><a href="/assets/files/sparq/SPARQ_Student_Brochure.pdf" target="_blank">Check Brochure</a></li>
           </ul>
         </div>
 
@@ -184,28 +218,61 @@
           </div>
           <div class="detail-item">
             <span class="detail-label">Format:</span>
-            <span class="detail-value">MCQs & ICPC-style Problems</span>
+            <span class="detail-value">MCQs & ICPC-style (coding) Problems</span>
           </div>
           <div class="detail-item">
             <span class="detail-label">Registration Fee:</span>
-            <span class="detail-value">₹300</span>
+            <span class="detail-value"><a href="/assets/files/sparq/SPARQ_Student_Brochure.pdf" target="_blank">Check
+                Brochure</a></span>
           </div>
         </div>
 
         <div class="syllabus-box">
           <h4 class="syllabus-title">Syllabus (For UG)</h4>
           <ul class="syllabus-list">
-            <li>Statistics</li>
-            <li>Probability</li>
-            <li>Mathematics</li>
-            <li>Based on MCQ questions</li>
+            <li><a href="/assets/files/sparq/SPARQ_Student_Brochure.pdf" target="_blank">Check Brochure</a></li>
           </ul>
         </div>
 
         <div class="rewards-box">
-          <p>✨ Top performers advance to Round 2</p>
+          <p>✨ Top 40% advance to Round 2</p>
+          <p>📜 Participation certificates for all</p>
+          <p>🎖️ Merit certificates for top performers</p>
+          <p>🧑‍🎓 Exclusive workshop by <strong>Industry Experts</strong>, <strong>IIT</strong> & <strong>ISI</strong>
+            professors, and <strong>CAIML</strong> experts <span class="prize-sub">(AI/ML Lab at ISI Kolkata)</span></p>
+        </div>
+      </div>
+
+
+      <!-- SPARQ Senior Round 2 -->
+      <div class="event-card">
+        <div class="event-header">
+          <div class="event-icon">📊</div>
+          <h3 class="event-title">SPARQ SENIOR - Round 2</h3>
+        </div>
+        <div class="event-badge">For Undergraduates</div>
+
+        <div class="event-details">
+          <div class="detail-item">
+            <span class="detail-label">Date:</span>
+            <span class="detail-value">One week after Round 1</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Venue:</span>
+            <span class="detail-value">Online, Kaggle based competition</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Format:</span>
+            <span class="detail-value">A week long hackathon (modeling/prediction problem)</span>
+          </div>
+        </div>
+
+        <div class="rewards-box">
           <p>💰 Attractive cash prizes</p>
-          <p>‍🧑‍🎓 Workshop by eminent professionals and researchers</p>
+          <p>🎖️ Merit certificates for top performers</p>
+          <p>🏆 Winners attend a <strong>CAIML</strong> workshop <span class="prize-sub">(ISI Kolkata’s ML Lab)</span>
+            and an <strong>Industry Interaction Camp</strong> with experts from J.P. Morgan, Standard Chartered, Goldman
+            Sachs, and other leading firms.</p>
         </div>
       </div>
     </div>
@@ -217,19 +284,9 @@
       <h2 class="section-title">Key Dates</h2>
       <div class="dates-grid">
         <div class="date-card">
-          <div class="date-icon">📅</div>
-          <h3 class="date-title">Registration Starts</h3>
-          <p class="date-value coming-soon">Coming Soon</p>
-        </div>
-        <div class="date-card">
           <div class="date-icon">⏰</div>
           <h3 class="date-title">Registration Ends</h3>
-          <p class="date-value coming-soon">Coming Soon</p>
-        </div>
-        <div class="date-card">
-          <div class="date-icon">🎫</div>
-          <h3 class="date-title">Admit Cards Release</h3>
-          <p class="date-value coming-soon">Coming Soon</p>
+          <p class="date-value coming-soon">December 31, 2025</p>
         </div>
         <div class="date-card highlight">
           <div class="date-icon">🚀</div>
@@ -252,15 +309,9 @@
       <div class="registration-box">
         <h3 class="registration-title">Registration Portal</h3>
 
-        <!-- Google Form Embed Space -->
-        <div class="form-container">
-          <div class="form-placeholder">
-            <div class="form-icon">📝</div>
-            <p class="form-text">Registration Form</p>
-            <p class="coming-soon">Coming Soon</p>
-            <!-- Replace the content below with your Google Form embed code -->
-            <!-- <iframe src="YOUR_GOOGLE_FORM_LINK" width="100%" height="600" frameborder="0"></iframe> -->
-          </div>
+        <div class="form-btn-container">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfVG8wuqgPm1bh2qFa3kG1O23mBs4eCA60MeCmObK_hdr1u-w/viewform"
+            target="_blank" class="poster-btn">Form Link</a>
         </div>
       </div>
     </div>
@@ -270,9 +321,6 @@
     <div class="footer-content">
       <div class="footer-logo">Integration Fest 2026</div>
       <div class="footer-contact">
-        <p class="contact-item">
-          📧 <a href="mailto:arnabpalit.integration@gmail.com">arnabpalit.integration@gmail.com</a>
-        </p>
         <p class="contact-item">
           📧 <a href="mailto:sparq@integrationfest.in">sparq@integrationfest.in</a>
         </p>
