--- a/intbee/index.html
+++ b/intbee/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="darkreader-lock">
   <title>Integration Bee 2026 - Integration Fest</title>
-  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/global.css">
 </head>
@@ -111,25 +109,17 @@
     <div class="section-content">
       <h2 class="section-title">Event Poster</h2>
       <div class="poster-placeholder">
-        <img src="/assets/files/intbee/Integration_Bee_Poster.png" alt="Integration Bee Poster" width="500"
-          height="707.317">
+        <div class="poster-icon">🐝</div>
+        <p class="poster-text">Poster Coming Soon</p>
       </div>
-    </div>
-  </section>
-
-  <section class="page-section">
-    <div class="section-content">
-      <h2 class="section-title">Event Brochure</h2>
       <div class="poster-container">
-        <a href="/assets/files/intbee/Integration_Bee_Brochure.pdf" target="_blank" class="poster-btn">
-          View Brochure
-        </a>
+        <a href="#" class="btn poster-btn">View Poster</a>
       </div>
     </div>
   </section>
 
   <!-- Format Section -->
-  <section id="format" class="page-section alt-bg">
+  <section id="format" class="page-section">
     <div class="section-content">
       <h2 class="section-title">Format of the Contest</h2>
 
@@ -143,7 +133,7 @@
         <div class="event-details">
           <div class="detail-item">
             <span class="detail-label">Format:</span>
-            <span class="detail-value">Written Test (Offline)</span>
+            <span class="detail-value">Written Test</span>
           </div>
           <div class="detail-item">
             <span class="detail-label">Problems:</span>
@@ -179,7 +169,7 @@
         <div class="event-details">
           <div class="detail-item">
             <span class="detail-label">Format:</span>
-            <span class="detail-value">Head-to-Head Battles (Offline)</span>
+            <span class="detail-value">Head-to-Head Battles</span>
           </div>
           <div class="detail-item">
             <span class="detail-label">Time per Problem:</span>
@@ -210,7 +200,7 @@
   </section>
 
   <!-- Eligibility & Details -->
-  <section class="page-section">
+  <section class="page-section alt-bg">
     <div class="section-content">
       <h2 class="section-title">Eligibility & Important Details</h2>
 
@@ -253,39 +243,50 @@
   </section>
 
   <!-- Key Dates Section -->
-  <section id="dates" class="page-section alt-bg">
+  <section id="dates" class="page-section">
     <div class="section-content">
       <h2 class="section-title">Event Details</h2>
       <div class="dates-grid">
-        <div class="date-card">
+        <div class="date-card highlight">
           <div class="date-icon">📅</div>
           <h3 class="date-title">Event Date</h3>
-          <p class="date-value coming-soon">25th January 2026</p>
+          <p class="date-value">25th January 2026</p>
         </div>
         <div class="date-card highlight">
           <div class="date-icon">⏰</div>
           <h3 class="date-title">Time</h3>
           <p class="date-value">11:00 AM</p>
         </div>
-        <div class="date-card">
+        <div class="date-card highlight">
           <div class="date-icon">📍</div>
           <h3 class="date-title">Venue</h3>
-          <p class="date-value">ISI Kolkata & ISI Bangalore</p>
+          <p class="date-value">ISI Kolkata</p>
+        </div>
+        <div class="date-card">
+          <div class="date-icon">🎫</div>
+          <h3 class="date-title">Registration</h3>
+          <p class="date-value coming-soon">Coming Soon</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Registration Section -->
-  <section id="register" class="page-section">
+  <section id="register" class="page-section alt-bg">
     <div class="section-content">
       <h2 class="section-title">Register for Integration Bee</h2>
       <div class="registration-box">
         <h3 class="registration-title">Registration Portal</h3>
 
-        <div class="form-btn-container">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScWfBTGddcDmO18DshtQ_TH7xKyJ7XwPPvF1eNHzD2CzVMFXw/viewform"
-            target="_blank" class="poster-btn">Form Link</a>
+        <!-- Google Form Embed Space -->
+        <div class="form-container">
+          <div class="form-placeholder">
+            <div class="form-icon">🐝</div>
+            <p class="form-text">Let's Get In-credible!</p>
+            <p class="coming-soon">Registration Opening Soon</p>
+            <!-- Replace the content below with your Google Form embed code -->
+            <!-- <iframe src="YOUR_GOOGLE_FORM_LINK" width="100%" height="600" frameborder="0"></iframe> -->
+          </div>
         </div>
       </div>
     </div>
