--- a/mtrp/index.html
+++ b/mtrp/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="darkreader-lock">
   <title>MTRP 2026 - Integration Fest</title>
-  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/global.css">
 </head>
@@ -106,27 +104,6 @@
     </div>
   </section>
 
-  <!-- Poster Section -->
-  <section class="page-section alt-bg">
-    <div class="section-content">
-      <h2 class="section-title">Event Poster</h2>
-      <div class="poster-placeholder">
-        <img src="/assets/files/mtrp/Mtrp_Poster.png" alt="MTRP Poster" width="500" height="707.317">
-      </div>
-    </div>
-  </section>
-
-  <section class="page-section">
-    <div class="section-content">
-      <h2 class="section-title">Event Brochure</h2>
-      <div class="poster-container">
-        <a href="/assets/files/mtrp/Mtrp_Brochure.pdf" target="_blank" class="poster-btn">
-          View Brochure
-        </a>
-      </div>
-    </div>
-  </section>
-
   <!-- Eligibility Section -->
   <section class="page-section alt-bg">
     <div class="section-content">
@@ -174,7 +151,7 @@
         <div class="quick-info-card">
           <div class="quick-icon">💰</div>
           <h3>Entry Fee</h3>
-          <p>₹249 - ₹349</p>
+          <p>₹249 - ₹299</p>
         </div>
         <div class="quick-info-card">
           <div class="quick-icon">🏕️</div>
@@ -576,11 +553,15 @@
             </div>
             <div class="fee-item">
               <span>Junior Entry:</span>
-              <strong>₹349</strong>
+              <strong>₹299</strong>
             </div>
             <div class="fee-item">
               <span>Senior Entry:</span>
-              <strong>₹349</strong>
+              <strong>₹299</strong>
+            </div>
+            <div class="fee-item">
+              <span>Primer + Entry:</span>
+              <strong>₹450</strong>
             </div>
           </div>
         </div>
@@ -605,25 +586,10 @@
         <div class="reg-card">
           <div class="reg-icon">📚</div>
           <h3 class="reg-title">MTRP Problem Primer</h3>
-          <p class="primer-desc" style="margin-bottom: 30px;">
+          <p class="primer-desc">
             A curated collection of elegant mathematical problems. Request through registration form.
-            Postal delivery after committee confirmation.
+            Postal delivery after committee confirmation. Payment only after confirmation.
           </p>
-          <div class="fee-details">
-            <div class="fee-item">
-              <span>Sub-Junior Primer:</span>
-              <strong>₹150</strong>
-            </div>
-            <div class="fee-item">
-              <span>Junior Primer:</span>
-              <strong>₹200</strong>
-            </div>
-            <div class="fee-item">
-              <span>Senior Primer:</span>
-              <strong>₹200</strong>
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
@@ -749,16 +715,18 @@
     </div>
   </section>
 
-  <!-- Registration Section -->
-  <section id="register" class="page-section">
+  <!-- Registration Form Section -->
+  <section id="register" class="page-section alt-bg">
     <div class="section-content">
-      <h2 class="section-title">Register for MTRP</h2>
+      <h2 class="section-title">Register for MTRP 2026</h2>
       <div class="registration-box">
-        <h3 class="registration-title">Registration Portal</h3>
-
-        <div class="form-btn-container">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScyrqfWSN4nuVkynanacbdHR0oOijIIK10SWn1EIlHHO6R8Tg/viewform"
-            target="_blank" class="poster-btn">Form Link</a>
+        <div class="form-placeholder">
+          <div class="form-icon">📐</div>
+          <h3 class="form-title">Registration Opens December 1, 2025</h3>
+          <p class="form-desc">Portal will be available on integrationfest.in</p>
+          <div class="countdown-info">
+            <p class="coming-soon">Coming Soon</p>
+          </div>
         </div>
       </div>
     </div>
@@ -789,7 +757,7 @@
             <p class="contact-item">
               <span class="contact-icon">📧</span>
               <a href="mailto:mtrp@integrationfest.in">mtrp@integrationfest.in</a>
-              <a href="mailto:helpdesk.mtrp@integrationfest.in">helpdesk.mtrp@integrationfest.in</a>
+              <a href="mailto:helpdesk@integrationfest.in">helpdesk@integrationfest.in</a>
             </p>
             <p class="contact-item">
               <span class="contact-icon">📞</span>
