--- a/about_us/index.html
+++ b/about_us/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="quantum-flow.css">
 </head>
 
-<body class="dark-theme">
+<body class="light-theme">
     
   <canvas id="quantumCanvas"></canvas>
 
@@ -48,9 +48,9 @@
       <div class="quantum-node" data-node-id="0">
         <div class="node-profile">
           <div class="node-img-container">
-            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV1" alt="Arjun Das" class="node-img">
+            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV1" alt="Jishnu Ray Chaudhuri" class="node-img">
           </div>
-          <div><h3 class="node-name">Arjun Das</h3><p class="node-tag">Pipeline Architect</p></div>
+          <div><h3 class="node-name">Jishnu Ray Chaudhuri</h3><p class="node-tag">Pipeline Architect</p></div>
         </div>
         <div class="data-pulse">
             <p>"Automation is the core integral of efficiency. No step manual."</p>
@@ -61,9 +61,9 @@
       <div class="quantum-node" data-node-id="1">
         <div class="node-profile">
           <div class="node-img-container">
-            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV2" alt="Sneha Roy" class="node-img">
+            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV2" alt="Avigyan Chakraborty" class="node-img">
           </div>
-          <div><h3 class="node-name">Sneha Roy</h3><p class="node-tag">Runtime Specialist</p></div>
+          <div><h3 class="node-name">Avigyan Chakraborty</h3><p class="node-tag">Runtime Specialist</p></div>
         </div>
         <div class="data-pulse">
             <p>"Latency is the enemy of experience. Optimize everything, always."</p>
@@ -74,9 +74,9 @@
       <div class="quantum-node" data-node-id="2">
         <div class="node-profile">
           <div class="node-img-container">
-            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV3" alt="Rohan Mehta" class="node-img">
+            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV3" alt="Anant Raj" class="node-img">
           </div>
-          <div><h3 class="node-name">Rohan Mehta</h3><p class="node-tag">Monitoring Engineer</p></div>
+          <div><h3 class="node-name">Anant Raj</h3><p class="node-tag">Monitoring Engineer</p></div>
         </div>
         <div class="data-pulse">
             <p>"If a tree falls in the forest and you don't have a log entry, did it really fall?"</p>
@@ -87,9 +87,9 @@
       <div class="quantum-node" data-node-id="3">
         <div class="node-profile">
           <div class="node-img-container">
-            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV4" alt="Liam Chen" class="node-img">
+            <img src="https://placehold.co/100x100/1a1a1a/FFF?text=DEV4" alt="Tanmay Rai" class="node-img">
           </div>
-          <div><h3 class="node-name">Liam Chen</h3><p class="node-tag">Security Engineer</p></div>
+          <div><h3 class="node-name">Tanmay Rai</h3><p class="node-tag">Security Engineer</p></div>
         </div>
         <div class="data-pulse">
             <p>"If you think security is expensive, try a data breach. Audit everything."</p>
@@ -110,4 +110,5 @@
 
   <script src="quantum-web.js"></script>
 </body>
+
 </html>
