--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/global.css">
 </head>
-
+/* kjds */
 <body class="light-mode">
   <!-- Loading Screen -->
   <!-- <div class="loading-screen" id="loadingScreen"> -->
